# meteofrance_bra_hist

./: .gitignore  Dockerfile  LICENSE  Procfile  api.py  daily_build_urls.py  extract.py  index.html  pyproject.toml  readme.md  requirements.txt  schema.json  setup.cfg  urls_list  vizu.html  zones.json
.github/workflows/: main.yml
app/: daily_build_urls.py  daily_extract_all_beras.py  daily_extract_all_beras.sh  historical_extract_all_beras.py  requirements.txt
app/data/: bera.xml  hist_synthetise_bera.csv  urls_list.txt
app/tmp/: bera.xml
app/utils/: bulletin.py  extract.py  github.py  tmp.py
bera/: add_missing_hist_data.py  count_missing_situation_avalancheuse_per_massif.py  daily_build_urls.py  daily_extract_all_beras.py  edit_header_hist_csv.py  historical_build_urls.py  historical_extract_all_beras.py  historical_format_all_beras.py  merge_all_csv_files.py  remove_duplicate_lines_data_hist.py
bera/utils/: bulletin.py  common.py  extract.py  github.py  github_utils.py
data/: urls_list.txt
data/ANDORRE/: hist.csv  urls_list.txt
data/ARAVIS/: hist.csv  urls_list.txt
data/ASPE-OSSAU/: hist.csv  urls_list.txt
data/AURE-LOURON/: hist.csv  urls_list.txt
data/BAUGES/: hist.csv  urls_list.txt
data/BEAUFORTAIN/: hist.csv  urls_list.txt
lib/: extract.py
scripts/: daily_build_urls.py  test.py
src/: daily_build_urls.py  daily_extract_all_beras.py  historical_build_urls.py  historical_extract_all_beras.py  requirements.txt
tests/: invalid_attribute_bera.xml  invalid_tag_bera.xml  valid_bera.xml
utils/: bulletin.py  extract.py  github.py
(+211 files in other folders)
