
[tool.poetry]
name = "bera"
version = "0.1.0"
description = "Historical data of avalanche risks"
authors = ["Quentin <quentin.loridant@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.4.3"
requests = "^2.28.1"
webdriver-manager = "^3.8.3"
PyGithub = "^1.55"
pandas = "^1.4.4"
pytest = "^7.1.3"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
