[metadata]
name = meteofrance_bera
version = 0.0.1
author = Quentin Loridant
author_email = quentin.loridant@protonmail.com
description = A package to open the data from BERA
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qloridant/meteofrance_bra_hist
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
